# QSortFilterProxyModel

./: .gitignore  CMakeLists.txt  README.md  SortFilterProxyModel.pri  qpm.json  sortfilterproxymodel.qdocconf
.github/workflows/: main.yml
include/SortFilterProxyModel/: SortFilterProxyModel.hpp  utils.h
src/: QQmlSortFilterProxyModel  qqmlsortfilterproxymodel.cpp  qqmlsortfilterproxymodel.h  qqmlsortfilterproxymodel_shared.h  utils.cpp
src/filters/: alloffilter.cpp  alloffilter.h  anyoffilter.cpp  anyoffilter.h  expressionfilter.cpp  expressionfilter.h  filter.cpp  filter.h  filtercontainer.cpp  filtercontainer.h  filtercontainerfilter.cpp  filtercontainerfilter.h  filtersqmltypes.cpp  indexfilter.cpp  indexfilter.h  rangefilter.cpp  rangefilter.h  regexpfilter.cpp  regexpfilter.h  rolefilter.cpp  rolefilter.h  valuefilter.cpp  valuefilter.h
src/proxyroles/: expressionrole.cpp  expressionrole.h  filterrole.cpp  filterrole.h  joinrole.cpp  joinrole.h  proxyrole.cpp  proxyrole.h  proxyrolecontainer.cpp  proxyrolecontainer.h  proxyrolesqmltypes.cpp  regexprole.cpp  regexprole.h  singlerole.cpp  singlerole.h  switchrole.cpp  switchrole.h
src/sorters/: expressionsorter.cpp  expressionsorter.h  filtersorter.cpp  filtersorter.h  rolesorter.cpp  rolesorter.h  sorter.cpp  sorter.h  sortercontainer.cpp  sortercontainer.h  sortersqmltypes.cpp  stringsorter.cpp  stringsorter.h
tests/: CMakeLists.txt  indexsorter.cpp  indexsorter.h  testroles.cpp  testroles.h  tst_delayed.qml  tst_helpers.qml  tst_proxyroles.qml  tst_sorters.qml  tst_sortfilterproxymodel.cpp
